Renderer Abstraction with OpenGL

--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -4,12 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=82,98
+ViewportPos=1112,402
+ViewportId=0xE927CF2F
 Size=550,680
 Collapsed=0
 
-[Window][Example: Log]
-Pos=60,59
-Size=500,400
-Collapsed=0
+[Docking][Data]
 
