--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -10,18 +10,15 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=0,19
+ViewportPos=285,635
+ViewportId=0x1C33C293
 Size=1920,1004
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1920,1057
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=0,42 Size=1920,1038 Split=Y
-  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=1280,1004 Selected=0x54723243
-  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=1280,32 CentralNode=1
+DockSpace ID=0x3BC79352 Pos=0,42 Size=1920,1038 CentralNode=1
 
