--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -15,13 +15,29 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=312,19
-Size=968,701
+Pos=325,19
+Size=955,701
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Statistics]
+Pos=0,488
+Size=323,232
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Entity Editor]
+Pos=0,19
+Size=323,467
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=169,217 Size=1280,701 Split=X
-  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=310,701 Selected=0x54723243
-  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=968,701 CentralNode=1 Selected=0x13926F0B
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=34,76 Size=1280,701 Split=X
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=323,701 Split=Y Selected=0xEEF06B6F
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=123,467 Selected=0xEEF06B6F
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=123,232 Selected=0x47E8F9DC
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=955,701 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=310,701 Selected=0x54723243
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=968,701 CentralNode=1 Selected=0x13926F0B
 
