--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -16,7 +16,7 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=364,19
-Size=916,701
+Size=630,701
 Collapsed=0
 DockId=0x00000002,0
 
@@ -32,12 +32,20 @@ Size=362,467
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Scene Hierarchy]
+Pos=996,19
+Size=284,701
+Collapsed=0
+DockId=0x00000008,0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=105,153 Size=1280,701 Split=X
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=362,701 Split=Y Selected=0xEEF06B6F
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=123,467 Selected=0xEEF06B6F
-    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=123,232 Selected=0x47E8F9DC
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=916,701 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=310,701 Selected=0x54723243
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=968,701 CentralNode=1 Selected=0x13926F0B
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=233,281 Size=1280,701 Split=X
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=994,701 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=362,701 Split=Y Selected=0xEEF06B6F
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=123,467 Selected=0xEEF06B6F
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=123,232 Selected=0x47E8F9DC
+    DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=630,701 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=310,701 Selected=0x54723243
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=968,701 CentralNode=1 Selected=0x13926F0B
+  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=284,701 Selected=0x2E9237F7
 
