--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -15,37 +15,41 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=364,19
-Size=630,701
+Pos=0,19
+Size=885,701
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Statistics]
-Pos=0,488
-Size=362,232
+Pos=887,373
+Size=393,347
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000A,1
 
 [Window][Entity Editor]
 Pos=0,19
-Size=362,467
+Size=362,701
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007,0
 
 [Window][Scene Hierarchy]
-Pos=996,19
-Size=284,701
+Pos=887,19
+Size=393,352
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000009,0
+
+[Window][Properties]
+Pos=887,373
+Size=393,347
+Collapsed=0
+DockId=0x0000000A,0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=233,281 Size=1280,701 Split=X
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=994,701 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=362,701 Split=Y Selected=0xEEF06B6F
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=123,467 Selected=0xEEF06B6F
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=123,232 Selected=0x47E8F9DC
-    DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=630,701 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=310,701 Selected=0x54723243
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=968,701 CentralNode=1 Selected=0x13926F0B
-  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=284,701 Selected=0x2E9237F7
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=265,313 Size=1280,701 Split=X
+  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=885,701 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=310,701 Selected=0x54723243
+    DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=968,701 CentralNode=1 Selected=0x13926F0B
+  DockNode    ID=0x00000008 Parent=0x3BC79352 SizeRef=393,701 Split=Y Selected=0x2E9237F7
+    DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=284,352 Selected=0x2E9237F7
+    DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=284,347 Selected=0x199AB496
 
