--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "game-engine/vendor/entt"]
+	path = game-engine/vendor/entt
+	url = https://github.com/skypjack/entt.git
 [submodule "game-engine/vendor/spdlog"]
 	path = game-engine/vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
