--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -1,55 +1,43 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1057
+Size=1280,720
 Collapsed=0
-
-[Window][Settings]
-Pos=0,19
-Size=310,701
-Collapsed=0
-DockId=0x00000001,0
 
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Viewport]
-Pos=0,19
-Size=1525,1038
-Collapsed=0
-DockId=0x00000002,0
-
 [Window][Statistics]
-Pos=1527,543
-Size=393,514
+Pos=822,343
+Size=458,377
 Collapsed=0
-DockId=0x0000000A,1
-
-[Window][Entity Editor]
-Pos=0,19
-Size=362,701
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Scene Hierarchy]
-Pos=1527,19
-Size=393,522
-Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000004,0
 
 [Window][Properties]
-Pos=1527,543
-Size=393,514
+Pos=0,19
+Size=289,701
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000005,0
+
+[Window][Viewport]
+Pos=291,19
+Size=529,701
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Scene Hierarchy]
+Pos=822,19
+Size=458,322
+Collapsed=0
+DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,42 Size=1920,1038 Split=X
-  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=885,701 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=310,701 Selected=0x54723243
-    DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=968,701 CentralNode=1 Selected=0x13926F0B
-  DockNode    ID=0x00000008 Parent=0x3BC79352 SizeRef=393,701 Split=Y Selected=0x2E9237F7
-    DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=284,352 Selected=0x2E9237F7
-    DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=284,347 Selected=0x199AB496
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=216,258 Size=1280,701 Split=X
+  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=289,701 Selected=0x199AB496
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=989,701 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=1169,701 CentralNode=1 Selected=0x13926F0B
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=458,701 Split=Y Selected=0x2E9237F7
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=198,322 Selected=0x2E9237F7
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=198,377 Selected=0x47E8F9DC
 
