Editor Properties Panel - Drag/Drop Textures

--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -9,35 +9,41 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=822,343
-Size=458,377
+Pos=0,19
+Size=325,701
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,1
 
 [Window][Properties]
 Pos=0,19
-Size=289,701
+Size=325,701
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Viewport]
-Pos=291,19
-Size=529,701
+Pos=327,19
+Size=678,701
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000006,0
 
 [Window][Scene Hierarchy]
-Pos=822,19
-Size=458,322
+Pos=1007,19
+Size=273,545
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Asset Panel]
+Pos=1007,566
+Size=273,154
+Collapsed=0
+DockId=0x00000004,0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=216,258 Size=1280,701 Split=X
-  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=289,701 Selected=0x199AB496
-  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=989,701 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=1169,701 CentralNode=1 Selected=0x13926F0B
-    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=458,701 Split=Y Selected=0x2E9237F7
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=198,322 Selected=0x2E9237F7
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=198,377 Selected=0x47E8F9DC
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=137,185 Size=1280,701 Split=X
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=1005,701 Split=X Selected=0x199AB496
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=325,701 CentralNode=1 Selected=0x199AB496
+    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=678,701 Selected=0x13926F0B
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=273,701 Split=Y Selected=0x2E9237F7
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=458,545 Selected=0x2E9237F7
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=458,154 Selected=0x9D571615
 
