--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,720
+Size=1259,720
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,41 +9,62 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=0,19
-Size=325,701
+Pos=0,53
+Size=304,667
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Properties]
-Pos=0,19
-Size=325,701
+Pos=0,53
+Size=304,667
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Viewport]
-Pos=327,19
-Size=678,701
+Pos=306,53
+Size=678,667
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene Hierarchy]
-Pos=1007,19
-Size=273,545
+Pos=986,53
+Size=273,464
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Asset Panel]
-Pos=1007,566
-Size=273,154
+Pos=986,519
+Size=273,201
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][##uitoolbar]
+Pos=526,115
+Size=32,32
+Collapsed=0
+
+[Window][UI toolbar]
+Pos=0,19
+Size=1280,216
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][##UItoolbar]
+Pos=0,19
+Size=1259,32
+Collapsed=0
+DockId=0x0000000A,0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=137,185 Size=1280,701 Split=X
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=1005,701 Split=X Selected=0x199AB496
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=325,701 CentralNode=1 Selected=0x199AB496
-    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=678,701 Selected=0x13926F0B
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=273,701 Split=Y Selected=0x2E9237F7
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=458,545 Selected=0x2E9237F7
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=458,154 Selected=0x9D571615
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=260,292 Size=1259,701 Split=Y
+  DockNode        ID=0x0000000A Parent=0x3BC79352 SizeRef=1259,32 HiddenTabBar=1 Selected=0xD8996CD5
+  DockNode        ID=0x0000000B Parent=0x3BC79352 SizeRef=1259,667 Split=Y
+    DockNode      ID=0x00000007 Parent=0x0000000B SizeRef=1280,216 Selected=0xCEA2F359
+    DockNode      ID=0x00000008 Parent=0x0000000B SizeRef=1280,483 Split=X
+      DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=1005,701 Split=X Selected=0x199AB496
+        DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=325,701 CentralNode=1 Selected=0x199AB496
+        DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=678,701 Selected=0x13926F0B
+      DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=273,701 Split=Y Selected=0x2E9237F7
+        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=458,464 Selected=0x2E9237F7
+        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=458,201 Selected=0x9D571615
 
