Renderer 2D Update - Circles, Lines & Rectangles

--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -58,13 +58,13 @@ DockId=0x0000000A,0
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,53 Size=1920,1027 Split=Y
   DockNode        ID=0x0000000A Parent=0x3BC79352 SizeRef=1259,32 HiddenTabBar=1 Selected=0xD8996CD5
-  DockNode        ID=0x0000000B Parent=0x3BC79352 SizeRef=1259,667 Split=Y
+  DockNode        ID=0x0000000B Parent=0x3BC79352 SizeRef=1259,993 Split=Y
     DockNode      ID=0x00000007 Parent=0x0000000B SizeRef=1280,216 Selected=0xCEA2F359
     DockNode      ID=0x00000008 Parent=0x0000000B SizeRef=1280,483 Split=X
       DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=1005,701 Split=X Selected=0x199AB496
-        DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=308,701 CentralNode=1 Selected=0x199AB496
+        DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=308,701 CentralNode=1 Selected=0x47E8F9DC
         DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1335,701 Selected=0x13926F0B
       DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=273,701 Split=Y Selected=0x2E9237F7
-        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=458,464 Selected=0x2E9237F7
-        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=458,201 Selected=0x9D571615
+        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=458,691 Selected=0x2E9237F7
+        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=458,300 Selected=0x9D571615
 
