--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -10,31 +10,31 @@ Collapsed=0
 
 [Window][Statistics]
 Pos=0,53
-Size=308,993
+Size=363,993
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Properties]
 Pos=0,53
-Size=308,993
+Size=363,993
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Viewport]
-Pos=310,53
-Size=1335,993
+Pos=365,53
+Size=1387,993
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene Hierarchy]
-Pos=1647,53
-Size=273,691
+Pos=1754,53
+Size=166,691
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Asset Panel]
-Pos=1647,746
-Size=273,300
+Pos=1754,746
+Size=166,300
 Collapsed=0
 DockId=0x00000004,0
 
@@ -61,10 +61,10 @@ DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,53 Size=1920,1027 Split=
   DockNode        ID=0x0000000B Parent=0x3BC79352 SizeRef=1259,993 Split=Y
     DockNode      ID=0x00000007 Parent=0x0000000B SizeRef=1280,216 Selected=0xCEA2F359
     DockNode      ID=0x00000008 Parent=0x0000000B SizeRef=1280,483 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=1005,701 Split=X Selected=0x199AB496
-        DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=308,701 CentralNode=1 Selected=0x47E8F9DC
-        DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1335,701 Selected=0x13926F0B
-      DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=273,701 Split=Y Selected=0x2E9237F7
+      DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=1112,701 Split=X Selected=0x199AB496
+        DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=363,701 CentralNode=1 Selected=0x199AB496
+        DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1387,701 Selected=0x13926F0B
+      DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=166,701 Split=Y Selected=0x2E9237F7
         DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=458,691 Selected=0x2E9237F7
         DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=458,300 Selected=0x9D571615
 
