--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,720
+Size=958,1041
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,32 +9,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=0,53
-Size=32,667
+Pos=0,19
+Size=219,1014
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Properties]
-Pos=0,53
-Size=32,667
+Pos=0,19
+Size=32,1022
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Viewport]
-Pos=34,53
-Size=1010,667
+Pos=34,19
+Size=669,1022
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene Hierarchy]
-Pos=1046,53
-Size=234,460
+Pos=705,113
+Size=253,760
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000B,0
 
 [Window][Asset Panel]
-Pos=1046,515
-Size=234,205
+Pos=705,875
+Size=253,166
 Collapsed=0
 DockId=0x00000004,0
 
@@ -50,21 +50,35 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][##UItoolbar]
-Pos=0,19
-Size=1280,32
+Pos=705,78
+Size=253,33
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000D,0
+
+[Window][Renderer Statistics]
+Pos=0,19
+Size=32,1022
+Collapsed=0
+DockId=0x00000005,1
+
+[Window][Scene Step]
+Pos=705,19
+Size=253,57
+Collapsed=0
+DockId=0x00000009,0
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=49,102 Size=1280,701 Split=Y
-  DockNode        ID=0x0000000A Parent=0x3BC79352 SizeRef=1259,32 HiddenTabBar=1 Selected=0xD8996CD5
-  DockNode        ID=0x0000000B Parent=0x3BC79352 SizeRef=1259,993 Split=Y
-    DockNode      ID=0x00000007 Parent=0x0000000B SizeRef=1280,216 Selected=0xCEA2F359
-    DockNode      ID=0x00000008 Parent=0x0000000B SizeRef=1280,483 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=720,701 Split=X Selected=0x199AB496
-        DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=443,701 CentralNode=1 Selected=0x199AB496
-        DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1239,701 Selected=0x13926F0B
-      DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=234,701 Split=Y Selected=0x2E9237F7
-        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=458,685 Selected=0x2E9237F7
-        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=458,306 Selected=0x9D571615
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=961,57 Size=958,1022 Split=Y
+  DockNode          ID=0x00000007 Parent=0x3BC79352 SizeRef=1280,216 Selected=0xCEA2F359
+  DockNode          ID=0x00000008 Parent=0x3BC79352 SizeRef=1280,483 Split=X
+    DockNode        ID=0x00000001 Parent=0x00000008 SizeRef=931,701 Split=X Selected=0x199AB496
+      DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=210,701 CentralNode=1 Selected=0x199AB496
+      DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=733,701 Selected=0x13926F0B
+    DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=253,701 Split=Y Selected=0x2E9237F7
+      DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=458,557 Split=Y Selected=0x2E9237F7
+        DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=225,91 Split=Y Selected=0xD8996CD5
+          DockNode  ID=0x00000009 Parent=0x0000000A SizeRef=253,56 Selected=0xF4636CDF
+          DockNode  ID=0x0000000D Parent=0x0000000A SizeRef=253,33 HiddenTabBar=1 Selected=0xD8996CD5
+        DockNode    ID=0x0000000B Parent=0x00000003 SizeRef=225,755 Selected=0x2E9237F7
+      DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=458,108 Selected=0x9D571615
 
