--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=958,1041
+Size=1920,1046
 Collapsed=0
 
 [Window][Debug##Default]
@@ -16,25 +16,25 @@ DockId=0x00000005,1
 
 [Window][Properties]
 Pos=0,19
-Size=236,1022
+Size=552,1027
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Viewport]
-Pos=238,19
-Size=526,1022
+Pos=554,19
+Size=1172,1027
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene Hierarchy]
-Pos=766,67
-Size=192,596
+Pos=1728,64
+Size=192,409
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Asset Panel]
-Pos=766,665
-Size=192,376
+Pos=1728,475
+Size=192,571
 Collapsed=0
 DockId=0x00000004,0
 
@@ -50,14 +50,14 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][##UItoolbar]
-Pos=766,19
-Size=192,46
+Pos=1728,19
+Size=192,43
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Renderer Statistics]
 Pos=0,19
-Size=236,1022
+Size=552,1027
 Collapsed=0
 DockId=0x00000005,1
 
@@ -74,19 +74,19 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Docking][Data]
-DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=961,57 Size=958,1022 Split=Y
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,53 Size=1920,1027 Split=Y
   DockNode            ID=0x00000007 Parent=0x3BC79352 SizeRef=1280,216 Selected=0xCEA2F359
   DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=1280,483 Split=X
     DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=1726,701 Split=X Selected=0x199AB496
-      DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=236,701 CentralNode=1 Selected=0x199AB496
-      DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=526,701 Selected=0x13926F0B
+      DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=552,701 CentralNode=1 Selected=0x1B782AF8
+      DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=1172,701 Selected=0x13926F0B
     DockNode          ID=0x00000002 Parent=0x00000008 SizeRef=192,701 Split=Y Selected=0x2E9237F7
-      DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=458,650 Split=Y Selected=0x2E9237F7
-        DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=225,46 Split=Y Selected=0xD8996CD5
+      DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=458,220 Split=Y Selected=0x2E9237F7
+        DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=225,43 Split=Y Selected=0xD8996CD5
           DockNode    ID=0x00000009 Parent=0x0000000A SizeRef=253,56 Selected=0xF4636CDF
           DockNode    ID=0x0000000D Parent=0x0000000A SizeRef=253,33 Split=X Selected=0xD8996CD5
             DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=92,87 HiddenTabBar=1 Selected=0xD8996CD5
             DockNode  ID=0x0000000E Parent=0x0000000D SizeRef=98,87 HiddenTabBar=1 Selected=0x2891FA52
-        DockNode      ID=0x0000000B Parent=0x00000003 SizeRef=225,602 Selected=0x2E9237F7
-      DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=458,380 Selected=0x9D571615
+        DockNode      ID=0x0000000B Parent=0x00000003 SizeRef=225,409 Selected=0x2E9237F7
+      DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=458,277 Selected=0x9D571615
 
