--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,720
+Size=1281,1048
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,31 +10,31 @@ Collapsed=0
 
 [Window][Statistics]
 Pos=0,19
-Size=219,1014
+Size=380,1029
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000005,0
 
 [Window][Properties]
 Pos=0,19
-Size=497,701
+Size=380,1029
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Viewport]
-Pos=499,19
-Size=546,701
+Pos=382,19
+Size=710,1029
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene Hierarchy]
-Pos=1047,53
-Size=233,275
+Pos=1094,83
+Size=187,317
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000F,0
 
 [Window][Asset Panel]
-Pos=1047,330
-Size=233,390
+Pos=1094,402
+Size=187,646
 Collapsed=0
 DockId=0x00000004,0
 
@@ -50,14 +50,14 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][##UItoolbar]
-Pos=1047,19
-Size=233,32
+Pos=1094,19
+Size=187,62
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x0000000A,0
 
 [Window][Renderer Statistics]
 Pos=0,19
-Size=497,701
+Size=306,701
 Collapsed=0
 DockId=0x00000005,0
 
@@ -74,19 +74,19 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Docking][Data]
-DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=163,216 Size=1280,701 Split=Y
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=1,50 Size=1281,1029 Split=Y
   DockNode            ID=0x00000007 Parent=0x3BC79352 SizeRef=1280,216 Selected=0xCEA2F359
   DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=1280,483 Split=X
-    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=951,701 Split=X Selected=0x199AB496
-      DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=243,701 CentralNode=1 Selected=0x199AB496
-      DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=546,701 Selected=0x13926F0B
-    DockNode          ID=0x00000002 Parent=0x00000008 SizeRef=233,701 Split=Y Selected=0x2E9237F7
-      DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=458,220 Split=Y Selected=0x2E9237F7
-        DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=225,45 Split=Y Selected=0xD8996CD5
-          DockNode    ID=0x00000009 Parent=0x0000000A SizeRef=253,56 Selected=0xF4636CDF
-          DockNode    ID=0x0000000D Parent=0x0000000A SizeRef=253,33 Split=X Selected=0xD8996CD5
-            DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=92,87 HiddenTabBar=1 Selected=0xD8996CD5
-            DockNode  ID=0x0000000E Parent=0x0000000D SizeRef=98,87 HiddenTabBar=1 Selected=0x2891FA52
-        DockNode      ID=0x0000000B Parent=0x00000003 SizeRef=225,409 Selected=0x2E9237F7
-      DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=458,277 Selected=0x9D571615
+    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=1092,701 Split=X Selected=0x199AB496
+      DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=380,701 CentralNode=1 Selected=0x199AB496
+      DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=710,701 Selected=0x13926F0B
+    DockNode          ID=0x00000002 Parent=0x00000008 SizeRef=187,701 Split=Y Selected=0x2E9237F7
+      DockNode        ID=0x00000009 Parent=0x00000002 SizeRef=253,56 Selected=0xF4636CDF
+      DockNode        ID=0x0000000D Parent=0x00000002 SizeRef=253,33 Split=X Selected=0xD8996CD5
+        DockNode      ID=0x0000000C Parent=0x0000000D SizeRef=92,87 Split=Y Selected=0xD8996CD5
+          DockNode    ID=0x00000003 Parent=0x0000000C SizeRef=233,259 Split=Y Selected=0x2E9237F7
+            DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=233,42 HiddenTabBar=1 Selected=0xD8996CD5
+            DockNode  ID=0x0000000F Parent=0x00000003 SizeRef=233,215 Selected=0x2E9237F7
+          DockNode    ID=0x00000004 Parent=0x0000000C SizeRef=233,440 Selected=0x9D571615
+        DockNode      ID=0x0000000E Parent=0x0000000D SizeRef=98,87 HiddenTabBar=1 Selected=0x2891FA52
 
