--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1080
+Size=1920,1050
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,32 +9,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=0,19
-Size=217,1061
+Pos=0,781
+Size=332,269
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000010,0
 
 [Window][Properties]
 Pos=0,19
-Size=217,1061
+Size=332,760
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x0000000B,0
 
 [Window][Viewport]
-Pos=219,19
-Size=1509,1061
+Pos=334,19
+Size=1394,1031
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene Hierarchy]
-Pos=1730,67
-Size=190,344
+Pos=1730,66
+Size=190,334
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Asset Panel]
-Pos=1730,413
-Size=190,667
+Pos=1730,402
+Size=190,648
 Collapsed=0
 DockId=0x00000004,0
 
@@ -51,7 +51,7 @@ DockId=0x00000007,0
 
 [Window][##UItoolbar]
 Pos=1730,19
-Size=190,46
+Size=190,45
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -59,7 +59,7 @@ DockId=0x0000000A,0
 Pos=0,19
 Size=306,701
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000B,0
 
 [Window][Scene Step]
 Pos=858,19
@@ -74,12 +74,14 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Docking][Data]
-DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,1061 Split=Y
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=11,64 Size=1920,1031 Split=Y
   DockNode            ID=0x00000007 Parent=0x3BC79352 SizeRef=1280,216 Selected=0xCEA2F359
   DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=1280,483 Split=X
     DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=1728,701 Split=X Selected=0x199AB496
-      DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=217,701 CentralNode=1 Selected=0x199AB496
-      DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=1509,701 Selected=0x13926F0B
+      DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=332,701 Split=Y Selected=0x199AB496
+        DockNode      ID=0x0000000B Parent=0x00000005 SizeRef=217,790 CentralNode=1 Selected=0x199AB496
+        DockNode      ID=0x00000010 Parent=0x00000005 SizeRef=217,269 Selected=0x47E8F9DC
+      DockNode        ID=0x00000006 Parent=0x00000001 SizeRef=1394,701 HiddenTabBar=1 Selected=0x13926F0B
     DockNode          ID=0x00000002 Parent=0x00000008 SizeRef=190,701 Split=Y Selected=0x2E9237F7
       DockNode        ID=0x00000009 Parent=0x00000002 SizeRef=253,56 Selected=0xF4636CDF
       DockNode        ID=0x0000000D Parent=0x00000002 SizeRef=253,33 Split=X Selected=0xD8996CD5
